--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="home-page"><h1>lonnywalkerIV</h1></div>
-	
-    <div class="links home-page-index">
-     
-      <a href="portfolio.html" target="_blank">Portfolio</a>
-	  <a href="architecture_file_system.html" target="_blank">File System</a>
-	  <a href="about.html" target="_blank">About</a>
+	<div class="outer-wrapper">
+		<div class="container">
+			<div class="sidebar sidebar-center">
+				<nav>
+					<a href="index.html" target="_blank">Home</a>
+					<a href="architecture_file_system.html" target="_blank">File System</a>
+					<a href="portfolio.html" target="_blank">Portfolio</a>
+					<a href="about.html" target="_blank">About</a>
+				</nav>
+			</div>
+				<div class="header"><h1>lonnywalkerIV</h1></div>
     </div>
-	
   </div>
 </body>
 </html>
