Testing formatting of 'portfolio, about'

--- a/about.html
+++ b/about.html
@@ -2,25 +2,30 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="css/styles.css">
-  <meta charset="UTF-8">
-  <title>josiahalvarez</title>
+	<meta charset="UTF-8">
+	<title>josiahalvarez</title>
 </head>
 
 <body>
-<div class="container">
-    <h1>lonnywalkerIV</h1>
-    <div class="links">
-		<a href="/index.html" target="_blank">Home</a>
-		<a href="/architecture_file_system.html" target="_blank">File System</a>
-		<a href="/portfolio.html" target="_blank">Portfolio</a>
-    </div>
-  </div>
- <br>
-  <div class="center">
- <h2>About</h2>
-
-Second year architecture student at Cal Poly San Luis Obispo.<br>
-	<p>  </p>
-</div>
+<div class="header"><h1>lonnywalkerIV</h1></div>
+	<div class="outer-wrapper">
+		<div class="container">
+			<div class="sidebar">
+				<nav>
+					<a href="index.html" target="_blank">Home</a>
+					<a href="architecture_file_system.html" target="_blank">File System</a>
+					<a href="portfolio.html" target="_blank">Portfolio</a>
+					<a href="about.html" target="_blank">About</a>
+				</nav>
+			</div>
+			<div class="main">
+				<div class="scrollable">
+					<h2>About</h2>
+          <p>Test</p>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
+
