Testing about page with image

--- a/architecture_file_system.html
+++ b/architecture_file_system.html
@@ -19,7 +19,7 @@
 				</nav>
 			</div>
 			<div class="main">
-				<div class="scrollable">
+				<div class="scrollable-filesys">
 					<pre>
 year
 	quarter/semester
@@ -27,7 +27,7 @@ year
 			architecture classes
 				01_References
 					siteanalysis
-					sunstudy
+					sunstudyd
 					precedent_studies
 					inspiration
 					context_media (site photos, videos, maps)
