--- a/about.html
+++ b/about.html
@@ -18,14 +18,17 @@
 					<a href="about.html" target="_blank">About</a>
 				</nav>
 			</div>
-			<div class="main">
-				<div class="scrollable">
-					<h2>About</h2>
-          <p>Test</p>
+			<div class="scrollable about-section">
+				<div class="about-textbox">
+				<h2>About</h2>
+        <p>Test.</p>
 				</div>
+        <div class="about-photo">
+          <img src="images/about_photo.png" alt="About Photo">
 			</div>
 		</div>
 	</div>
+</div>
 </body>
 </html>
 
