Clean up, ASCII filetree

--- a/architecture_file_system.html
+++ b/architecture_file_system.html
@@ -21,13 +21,13 @@
 			<div class="main">
 				<div class="scrollable-filesys">
 					<pre>
-year
+<!--year
 	quarter/semester
 		class_abbreviation(archXXX)
 			architecture classes
 				01_References
 					siteanalysis
-					sunstudyd
+					sunstudies
 					precedent_studies
 					inspiration
 					context_media (site photos, videos, maps)
@@ -51,6 +51,41 @@ year
 				03_Presentation
 				04_Admin
 					syllabus
+					-->
+year
+└───quarter/semester
+  └───class_abbreviation(archXXX)
+  	└───architecture classes
+      ├───01_References
+      │   ├───briefs
+      │   ├───context_media
+      │   ├───inspiration
+      │   ├───precedent_studies
+      │   │   └───Sticks_HoudeSousa
+      │   │       ├───06_Sticks, Hou de Sousa, Brooklyn
+      │   │       └───processdrawings
+      │   ├───readings
+      │   ├───siteanalysis
+      │   └───sunstudies
+      ├───02_Work
+      │   ├───diagrams
+      │   ├───progress_sets
+      │   │   ├───FINAL
+      │   │   └───yymmdd
+      │   │       ├───files used to create the deliverable
+      │   │       └───yymmdd_deliverables
+      │   ├───sketches
+      │   ├───working_files
+      │   │   ├───analytique
+      │   │   ├───joiner
+      │   │   └───model
+      │   │       ├───3dm
+      │   │       ├───drawings
+      │   │       └───modelphotos
+      │   └───writing
+      ├───03_Presentation
+      └───04_Admin
+        └───syllabus
 					</pre>
 				</div>
 			</div>
