--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="outer-wrapper">
 		<div class="container">
-			<div class="sidebar sidebar-center">
+			<div class="sidebar sidebar-home">
 				<nav>
 					<a href="index.html" target="_blank">Home</a>
 					<a href="architecture_file_system.html" target="_blank">File System</a>
