--- a/architecture_file_system.html
+++ b/architecture_file_system.html
@@ -12,10 +12,10 @@
 		<div class="container">
 			<div class="sidebar">
 				<nav>
-					<a href="index.html" target="_blank">Home</a>
-					<a href="architecture_file_system.html" target="_blank">File System</a>
-					<a href="portfolio.html" target="_blank">Portfolio</a>
-					<a href="about.html" target="_blank">About</a>
+					<a href="index.html">Home</a>
+					<a href="architecture_file_system.html">File System</a>
+					<a href="portfolio.html">Portfolio</a>
+					<a href="about.html">About</a>
 				</nav>
 			</div>
 			<div class="main">
