Work on README and about

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 			<div class="scrollable about-section">
 				<div class="about-textbox">
 				<h2>About</h2>
-        <p>Test.</p>
+        <p>Second year architecture student</p>
 				</div>
         <div class="about-photo">
           <img src="images/about_photo.png" alt="About Photo">
