--- a/architecture_file_system.html
+++ b/architecture_file_system.html
@@ -20,7 +20,7 @@
 			</div>
 			<div class="main">
 				<div class="scrollable-filesys">
-					<pre>
+					<pre class="scrollable-filesys">
 <!--year
 	quarter/semester
 		class_abbreviation(archXXX)
