Fixed Archive in sidebar

--- a/architecture_file_system.html
+++ b/architecture_file_system.html
@@ -17,6 +17,7 @@
 					<a href="architecture_file_system.html">File System</a>
 					<a href="portfolio.html">Portfolio</a>
 					<a href="about.html">About</a>
+					<a href="archive.html">Archive</a>
 				</nav>
 			</div>
 			<div class="main">
