Cleaned up all code, added test website for archive

--- a/architecture_file_system.html
+++ b/architecture_file_system.html
@@ -8,21 +8,21 @@
 </head>
 
 <body>
-<div class="header"><h1>lonnywalkerIV</h1></div>
-	<div class="outer-wrapper">
-		<div class="container">
-			<div class="sidebar">
-				<nav>
-					<a href="index.html">Home</a>
-					<a href="architecture_file_system.html">File System</a>
-					<a href="portfolio.html">Portfolio</a>
-					<a href="about.html">About</a>
-					<a href="archive.html">Archive</a>
-				</nav>
-			</div>
-			<div class="main">
-				<div class="scrollable-filesys">
-					<pre class="scrollable-filesys">
+<header class="header">
+	<h1>lonnywalkerIV</h1>
+</header>
+
+<div class="grid-layout">
+	<nav class="sidebar">
+		<a href="index.html">Home</a>
+		<a href="architecture_file_system.html">File System</a>
+		<a href="portfolio.html">Portfolio</a>
+		<a href="about.html">About</a>
+		<a href="archive.html" target="_blank">Archive</a>
+	</nav>
+	<div class="content">
+		<h2>Architectural File System</h2>
+		<pre>
 <!--year
 	quarter/semester
 		class_abbreviation(archXXX)
@@ -57,41 +57,38 @@
 year
 └───quarter/semester
   └───class_abbreviation(archXXX)
-  	└───architecture classes
-      ├───01_References
-      │   ├───briefs
-      │   ├───context_media
-      │   ├───inspiration
-      │   ├───precedent_studies
-      │   │   └───Sticks_HoudeSousa
-      │   │       ├───06_Sticks, Hou de Sousa, Brooklyn
-      │   │       └───processdrawings
-      │   ├───readings
-      │   ├───siteanalysis
-      │   └───sunstudies
-      ├───02_Work
-      │   ├───diagrams
-      │   ├───progress_sets
-      │   │   ├───FINAL
-      │   │   └───yymmdd
-      │   │       ├───files used to create the deliverable
-      │   │       └───yymmdd_deliverables
-      │   ├───sketches
-      │   ├───working_files
-      │   │   ├───analytique
-      │   │   ├───joiner
-      │   │   └───model
-      │   │       ├───3dm
-      │   │       ├───drawings
-      │   │       └───modelphotos
-      │   └───writing
-      ├───03_Presentation
-      └───04_Admin
-        └───syllabus
-					</pre>
-				</div>
-			</div>
-		</div>
+     ├───01_References
+     │  ├───briefs
+     │  ├───context_media
+     │  ├───inspiration
+     │  ├───precedent_studies
+     │  │   └───Sticks_HoudeSousa
+     │  │       ├───06_Sticks, Hou de Sousa, Brooklyn
+     │  │       └───processdrawings
+     │  ├───readings
+     │  ├───siteanalysis
+     │  └───sunstudies
+     ├───02_Work
+     │  ├───diagrams
+     │  ├───progress_sets
+     │  │   ├───FINAL
+     │  │   └───yymmdd
+     │  │       ├───files used to create the deliverable
+     │  │       └───yymmdd_deliverables
+     │  ├───sketches
+     │  ├───working_files
+     │  │   ├───analytique
+     │  │   ├───joiner
+     │  │   └───model
+     │  │       ├───3dm
+     │  │       ├───drawings
+     │  │       └───modelphotos
+     │  └───writing
+     ├───03_Presentation
+     └───04_Admin
+    	  └───syllabus
+		</pre>
 	</div>
+</div>
 </body>
 </html>
