--- a/about.html
+++ b/about.html
@@ -8,27 +8,28 @@
 </head>
 
 <body>
-<div class="header"><h1>lonnywalkerIV</h1></div>
-	<div class="outer-wrapper">
-		<div class="container">
-			<div class="sidebar">
-				<nav>
-					<a href="index.html">Home</a>
-					<a href="architecture_file_system.html">File System</a>
-					<a href="portfolio.html">Portfolio</a>
-					<a href="about.html">About</a>
-					<a href="archive.html">Archive</a>
-				</nav>
-			</div>
-			<div class="scrollable about-section">
-				<div class="about-textbox">
-				<h2>About</h2>
-        <p>second year architecture student</p>
-				</div>
-        <div class="about-photo">
-          <img src="images/about_photo.png" alt="About Photo">
-			</div>
+<header class="header">
+	<h1>lonnywalkerIV</h1>
+</header>
+
+<div class="grid-layout">
+	<nav class="sidebar">
+		<a href="index.html">Home</a>
+		<a href="architecture_file_system.html">File System</a>
+		<a href="portfolio.html">Portfolio</a>
+		<a href="about.html">About</a>
+		<a href="archive.html" target="_blank">Archive</a>
+	</nav>
+
+	<div class="content">
+		<div class="about-textbox">
+			<h2>About</h2>
+			<p>second year architecture student</p>
 		</div>
+	</div>
+<div class="info-box">
+  <div class="about-photo">
+    <img src="images/about_photo.png" alt="About Photo">
 	</div>
 </div>
 </body>
