--- a/archive.html
+++ b/archive.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Archive</title>
   <link rel="stylesheet" href="css/styles_archive.css">
   <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-  <div class="outer-wrapper">
-    <div class="container"></div>
+  <div class="content">
+    <div class="scrollable"></div>
       <div id="map" style="height: 400px; width: 400px;"></div>
       <script>
         // Initialize the map and set view to [latitude, longitude] and zoom level
@@ -24,7 +24,7 @@
         }).addTo(map);
         // Optional: Add a marker
         L.marker([40.7128, -74.0060]).addTo(map)
-          .bindPopup('You are here!')
+          .bindPopup('<a href="archive/thebuilding.html" target="_blank">The Building</a>')
           .openPopup();
       </script>
     </div>
