--- a/index.html
+++ b/index.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<link rel="stylesheet" href="css/styles.css">
-	<meta charset="UTF-8">
-	 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-	<title>lonnywalkerIV</title>
-</head>
+	<head>
+		<link rel="stylesheet" href="css/styles.css">
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+		<title>lonnywalkerIV</title>
+	</head>
 
-<body>
-	<div class="outer-wrapper">
-		<div class="container">
-			<div class="sidebar sidebar-home">
-				<nav>
-					<a href="index.html">Home</a>
-					<a href="architecture_file_system.html" >File System</a>
-					<a href="portfolio.html">Portfolio</a>
-					<a href="about.html">About</a>
-					<a href="archive.html">Archive</a>
-				</nav>
-			</div>
-				<div class="header"><h1>lonnywalkerIV</h1></div>
-    </div>
-  </div>
-</body>
+	<body>
+		<header class="header"><h1>lonnywalkerIV</h1></header>
+		<div class="grid-layout">
+			<nav class="sidebar sidebar-home">
+				<a href="index.html">Home</a>
+				<a href="architecture_file_system.html" >File System</a>
+				<a href="portfolio.html">Portfolio</a>
+				<a href="about.html">About</a>
+				<a href="archive.html" target="_blank">Archive</a>	
+			</nav>
+		</div>
+	</body>
 </html>
