Name, header text on buildings page, README

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 		<link rel="stylesheet" href="css/styles.css">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		<title>lonnywalkerIV</title>
+		<title>josiahalvarez</title>
 	</head>
 
 	<body>
-		<header class="header"><h1>lonnywalkerIV</h1></header>
+		<header class="header"><h1>josiahalvarez</h1></header>
 		<div class="grid-layout">
 			<nav class="sidebar sidebar-home">
 				<a href="index.html">Home</a>
