--- a/architecture_file_system.html
+++ b/architecture_file_system.html
@@ -17,7 +17,8 @@
 		<a href="index.html">Home</a>
 		<a href="architecture_file_system.html">File System</a>
 
-		<a href="archive.html" target="_blank">Archive</a>
+		<a href="about.html">About</a>
+
 	</nav>
 	<div class="content">
 		<h2>Architectural File System</h2>
