--- a/links.html
+++ b/links.html
@@ -17,19 +17,20 @@
 		<a href="index.html">Home</a>
 		<a href="architecture_file_system.html">File System</a>
 		<a href="portfolio.html">Portfolio</a>
-		<a href="archive.html" target="_blank">Archive</a>
 		<a href="about.html">About</a>
+		<a href="archive.html" target="_blank">Archive</a>
 		<a href="links.html">Links</a>	
 	</nav>
 	<div class="content">
 		<h2>Links</h2>
 		<h3>Tools</h3>
-		<uo>
+		<ul>
 			<li><a href="https://www.suncalc.org/">suncalc</a> - Calculate the position of the sun for any time, anywhere</li>
 			<li><a href="https://pimpmydrawing.com/">pimpmydrawing</a> - CAD people, trees, cars, plants, and more</li>
 			<li><a href="https://cadmapper.com/">cadmapper</a> - CAD files for any place on Earth</li>
 			<li><a href="https://sanhaw.com/common-lumber-dimensions">wood dimension guide</a> - Shows the difference between nominal and actual wood dimensions</li>
-			
+			<li><a href="https://www.mybib.com">mybib</a> - 1000x better than Citation Machine</li>
+
 			<!--
 			<li><a href="https://www.archdaily.com/">ArchDaily</a></li>
 			<li><a href="https://www.dezeen.com/">Dezeen</a></li>
@@ -42,12 +43,18 @@
 		<li><a href="https://www.architecturaldesigns.com/">Architectural Designs</a> - House plans and designs</li>
 			<li><a href="https://www.mapbox.com/">Mapbox</a> - Map tiles, geocoding, and more</li>
 			<li><a href="https://www.architecturalrecord.com/">Architectural Record</a> - News, projects, and products in architecture</li>-->
-		</uo>
+		</ul>
 		<br>
 		<h3>Resources</h3>
-		<li><a href="https://www.youtube.com/watch?v=-Zl_2aXwdjU">A must watch if you're starting out with Rhino</a></li>
-		<li><a href="https://pcad.lib.washington.edu/">Pacific Coast Architecture Database</a> - A database comprising of architecture found along the coasts of California, Oregon, and Washington</li>
-		<li><a href="https://www.ajbuildingslibrary.co.uk/">AJ's Building Library</a> - A library of buildings from around the world</li>
+		<ul>
+			<li><a href="https://www.youtube.com/watch?v=-Zl_2aXwdjU">"these two commands will make you a rhino LEGEND"</a> - A must watch if you're starting out with Rhino</li>
+			<li><a href="https://pcad.lib.washington.edu/">Pacific Coast Architecture Database</a> - A database comprising of architecture found along the coasts of California, Oregon, and Washington</li>
+			<li><a href="https://www.ajbuildingslibrary.co.uk/">AJ's Building Library</a> - A library of buildings from around the world</li>
+			<li><a href="https://archive.org/details/atelier-bow-wow-graphic-anatomy/">Graphic Anatomy by Atelier Bow Wow</a> - A book of displaying some of Atelier Bow Wow's work. A masterclass of section </li>
+			<li><a href="https://www.autodesk.com/education/edu-software/overview">Autodesk Edu</a> - Access to Revit and AutoCAD is free for students</li>
+			<li><a href="https://apps.ankiweb.net/">Anki</a> is a spaced repetition flashcard software (will change your life if you use it too much)</li>
+			<li><a href="https://ambientcg.com/">ambientCG</a> - 3D Assets</li>
+			</ul>
 	</div>
 </div>
 </body>
