--- a/portfolio.html
+++ b/portfolio.html
@@ -13,40 +13,21 @@
 </header>
 
 <div class="grid-layout">
-				<nav class="sidebar">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="architecture_file_system.html">File System</a></li>
-						<li><a href="portfolio.html">Portfolio</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="archive.html" target="_blank">Archive</a></li>
-					</ul>
-				</nav>
-
+	<nav class="sidebar">
+		<a href="index.html">Home</a>
+		<a href="architecture_file_system.html">File System</a>
+		<a href="portfolio.html">Portfolio</a>
+		<a href="about.html">About</a>
+		<a href="archive.html" target="_blank">Archive</a>
+		<a href="links.html">Links</a>
+	</nav>
 			<main class="content">
 				<div class="scrollable">
 					<h2>Portfolio</h2>
           <p>Testing</p>
-					Ab ipsapis seque pro venimet omnis eossimus quationecta volupta estota viderciae. Ita evel etus et et ma se idelloreheni vidit, tecum ipsumque re vel inullig enduntem invel iunt.
-At pratur? Lestiis consed ma expella borerum quametur? Quiam labori omnimus mod quidendita que di quas inum vendias debis solori sunt omnisit aquati dolore essitaque sit quis magnimod qui cusdantia eost quam facestisqui tem hicidel et enitat.
-Loris moditaquiam, comnimet vendand iaspiscia sum ulles eicturi oriae. Bis derchici doluptis dunti quam, solupita delesti urionseque aut aut quam, occae volorpor sitatiunti blab ius, at antibusdandi sequatquae sequi vid magni ressinusdae doluptate la nullore plaborempor simpore idererum eum et ditiame conecto od erum im nonsequ asperum duntum lacea es ullorporum event, comnis di voluptas minum facilique providi ciendan itatempe el et eos est ex et essi qui idit, te et et et aut ligene volora coreriature conse nis debiscius nes quas dit lit escipsam etus et, consed et ma vent, sequodi ressed maximuscid quia desequi omnimiliquis et ulligenit ulpa volorup tatemolupti iliatur, nonsequis explit estibea nonsect uritati andemque volo temquas alibus pore conseribus, occupta spellup tatque sequasit, venditatur ant dolupta turibus.
-Bea dolupti aut quos que veritios et alicillab ium repel in erro magnatem. Ut volorum consection cum que vel inullecat quaesequatem nitati aborrovid magnimi nvendi quiate velibus rerro es eatur sequame ra voluptam volores eos neculpa risint que enet quisintiae. Ecaecta tentioreiume ad ut aut delis moloreium quis nem sed qui vitecea tusandus delent oditatio. Neque nobis et estiis re est, explabore pe il eum fugia volorepe dolut eos ni tem re, exceat imus doloreperion ea quis sitatur?
-Dolupta estiunt. Lab intisque velis sint aceaqui quatatem quos qui nis inumquatur res inus quat faceris venihillabo. Ent officia que lam, aut esti quam alisqui tem am aspernam, exerfer sperovid qui res sum vendae non est di tempore rferum niassunt aute cum il magni toria di omnis estrupta vit vernatur sint, corendae ne coresti alibus sedisseque imus maios doluptu rionsequid eroribus dentisin pelestem excessim aut il ius maximodipis mo blaut quas cum sin re num que rerum dolorem quia sunt qui vella velique nullectaqui voloribus es alitis di sincima ionsenis consectat untur mos a dipiet atur acerum cus.
-Ur? Ullore as simporp orerchit evelibu saperfe rnatquas sim fugition consequo occum num aspe quo et aut et audist, sum quatetur, ilibusciet eum fuga. Ut fugit, seri officias eosam a num alici dolesto dit aut aliquam quam reprate mporene volupta quaspe raecus nihitatur?
-Fereped mincia nos non providus aut moles expedi conestrum sundam eum quos eveliqu ibusant harumquodis molupta venimin pel id qui as alit quo dollicid moloribus as dolut restori aceperuptur, santusantium fugiti videnimus volupid qui consed que niendis nobit, sitas reruptat autem vid quibercit que voluptamet lique esequia tiunt, eicitia vendandandit pliquo consequi autem restinc tesedisqui beroviti que acidellabo. Arciend ioratem. Gias qui consedi gnatis nempore ea am, corro et hit minulliqui cus dellacid quatquia volorru ptaqui officides ra solorepudi dolorem fugia doluptat ipsam ellorae volestia de viduci vent aut andam quo maios quiaturis iur senis deliquost occulpa ribus.
-Atus eicia conseriatur am reptae volorio nsequati aut dolorep ererferiam fugit rero te sedi dite alias quibusapid moleces cipsum, nimus magnihi ciande vendis quo blaut as aborepuda sim quo bea aut et, ipsa cores eum consequide sus as re seritat.
-Xerumendis evelentorum quam digenis as modis digendit, voluptur, sincill aboribus esto molest fuga. Nam cus moloribus dolupta turibus explique voluptatque consequodi vene verspit ut modicip sametur ad quodit accaere rsperfe rumendis doluptatur mos et et qui bea qui od molupta temquiae porero tem incto ea invenim ilique ex et, numqui si re dentem vollenis anihicia que con non nonserit, cor reriatur sundusc imilit, sim et, naturem faciunt, nem ut qui audit estio mi, sapicianto et aut omnis et aut lab incto moditatusam, quo ius porum exerrovid et accuptae derferspis sus, conem id quate volorem abor rero idi di voluptatet, aborro qui omnia pel ipsum ex et apeligenis magnis dit aut asit et ernat delesed igentium quisit qui dem commos plabore prehent aborestiumAb ipsapis seque pro venimet omnis eossimus quationecta volupta estota viderciae. Ita evel etus et et ma se idelloreheni vidit, tecum ipsumque re vel inullig enduntem invel iunt.
-At pratur? Lestiis consed ma expella borerum quametur? Quiam labori omnimus mod quidendita que di quas inum vendias debis solori sunt omnisit aquati dolore essitaque sit quis magnimod qui cusdantia eost quam facestisqui tem hicidel et enitat.
-Loris moditaquiam, comnimet vendand iaspiscia sum ulles eicturi oriae. Bis derchici doluptis dunti quam, solupita delesti urionseque aut aut quam, occae volorpor sitatiunti blab ius, at antibusdandi sequatquae sequi vid magni ressinusdae doluptate la nullore plaborempor simpore idererum eum et ditiame conecto od erum im nonsequ asperum duntum lacea es ullorporum event, comnis di voluptas minum facilique providi ciendan itatempe el et eos est ex et essi qui idit, te et et et aut ligene volora coreriature conse nis debiscius nes quas dit lit escipsam etus et, consed et ma vent, sequodi ressed maximuscid quia desequi omnimiliquis et ulligenit ulpa volorup tatemolupti iliatur, nonsequis explit estibea nonsect uritati andemque volo temquas alibus pore conseribus, occupta spellup tatque sequasit, venditatur ant dolupta turibus.
-Bea dolupti aut quos que veritios et alicillab ium repel in erro magnatem. Ut volorum consection cum que vel inullecat quaesequatem nitati aborrovid magnimi nvendi quiate velibus rerro es eatur sequame ra voluptam volores eos neculpa risint que enet quisintiae. Ecaecta tentioreiume ad ut aut delis moloreium quis nem sed qui vitecea tusandus delent oditatio. Neque nobis et estiis re est, explabore pe il eum fugia volorepe dolut eos ni tem re, exceat imus doloreperion ea quis sitatur?
-Dolupta estiunt. Lab intisque velis sint aceaqui quatatem quos qui nis inumquatur res inus quat faceris venihillabo. Ent officia que lam, aut esti quam alisqui tem am aspernam, exerfer sperovid qui res sum vendae non est di tempore rferum niassunt aute cum il magni toria di omnis estrupta vit vernatur sint, corendae ne coresti alibus sedisseque imus maios doluptu rionsequid eroribus dentisin pelestem excessim aut il ius maximodipis mo blaut quas cum sin re num que rerum dolorem quia sunt qui vella velique nullectaqui voloribus es alitis di sincima ionsenis consectat untur mos a dipiet atur acerum cus.
-Ur? Ullore as simporp orerchit evelibu saperfe rnatquas sim fugition consequo occum num aspe quo et aut et audist, sum quatetur, ilibusciet eum fuga. Ut fugit, seri officias eosam a num alici dolesto dit aut aliquam quam reprate mporene volupta quaspe raecus nihitatur?
-Fereped mincia nos non providus aut moles expedi conestrum sundam eum quos eveliqu ibusant harumquodis molupta venimin pel id qui as alit quo dollicid moloribus as dolut restori aceperuptur, santusantium fugiti videnimus volupid qui consed que niendis nobit, sitas reruptat autem vid quibercit que voluptamet lique esequia tiunt, eicitia vendandandit pliquo consequi autem restinc tesedisqui beroviti que acidellabo. Arciend ioratem. Gias qui consedi gnatis nempore ea am, corro et hit minulliqui cus dellacid quatquia volorru ptaqui officides ra solorepudi dolorem fugia doluptat ipsam ellorae volestia de viduci vent aut andam quo maios quiaturis iur senis deliquost occulpa ribus.
-Atus eicia conseriatur am reptae volorio nsequati aut dolorep ererferiam fugit rero te sedi dite alias quibusapid moleces cipsum, nimus magnihi ciande vendis quo blaut as aborepuda sim quo bea aut et, ipsa cores eum consequide sus as re seritat.
-Xerumendis evelentorum quam digenis as modis digendit, voluptur, sincill aboribus esto molest fuga. Nam cus moloribus dolupta turibus explique voluptatque consequodi vene verspit ut modicip sametur ad quodit accaere rsperfe rumendis doluptatur mos et et qui bea qui od molupta temquiae porero tem incto ea invenim ilique ex et, numqui si re dentem vollenis anihicia que con non nonserit, cor reriatur sundusc imilit, sim et, naturem faciunt, nem ut qui audit estio mi, sapicianto et aut omnis et aut lab incto moditatusam, quo ius porum exerrovid et accuptae derferspis sus, conem id quate volorem abor rero idi di voluptatet, aborro qui omnia pel ipsum ex et apeligenis magnis dit aut asit et ernat delesed igentium quisit qui dem commos plabore prehent aborestium
 				</div>
 			</main>
-		</div> 
+	</div> 
 <!--	</div>
 	</div>-->	
 </body>
