--- a/architecture_file_system.html
+++ b/architecture_file_system.html
@@ -19,6 +19,7 @@
 		<a href="portfolio.html">Portfolio</a>
 		<a href="about.html">About</a>
 		<a href="archive.html" target="_blank">Archive</a>
+		<a href="links.html">Links</a>
 	</nav>
 	<div class="content">
 		<h2>Architectural File System</h2>
