--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 				<a href="portfolio.html">Portfolio</a>
 				<a href="about.html">About</a>
 				<a href="archive.html" target="_blank">Archive</a>	
+				<a href="links.html">Links</a>
 			</nav>
 		</div>
 	</body>
