Bug fixes for links

--- a/links.html
+++ b/links.html
@@ -9,16 +9,16 @@
 
 <body>
 <header class="header">
-	<h1>lonnywalkerIV</h1>
+	<h1>josiahalvarez</h1>
 </header>
 
 <div class="grid-layout">
 	<nav class="sidebar">
 		<a href="index.html">Home</a>
 		<a href="architecture_file_system.html">File System</a>
-		<a href="portfolio.html">Portfolio</a>
+
 		<a href="about.html">About</a>
-		<a href="archive.html" target="_blank">Archive</a>
+
 		<a href="links.html">Links</a>	
 	</nav>
 	<div class="content">
