--- a/architecture_file_system.html
+++ b/architecture_file_system.html
@@ -18,6 +18,7 @@
 		<a href="architecture_file_system.html">File System</a>
 
 		<a href="about.html">About</a>
+		<a href="links.html">Links</a>	
 
 	</nav>
 	<div class="content">
