--- a/links.html
+++ b/links.html
@@ -55,6 +55,14 @@
 			<li><a href="https://apps.ankiweb.net/">Anki</a> is a spaced repetition flashcard software (will change your life if you use it too much)</li>
 			<li><a href="https://ambientcg.com/">ambientCG</a> - 3D Assets</li>
 			</ul>
+			<h4>
+				<ul>
+					<li><a href="https://www.youtube.com/@LearnUpstairs/">Upstairs</a> focuses on architectural representation and visualization</li>
+					<li><a href="https://www.youtube.com/channel/UCiRsHYsIuWwU78i9RE3nlMg">Gediminas Kirdeikis</a> teaches you experimental modeling, rendering, and fundamental tech.</li>
+				</ul>
+			</h4>
+			
+			
 	</div>
 </div>
 </body>
