Bug fixes for links

--- a/links.html
+++ b/links.html
@@ -16,9 +16,9 @@
 	<nav class="sidebar">
 		<a href="index.html">Home</a>
 		<a href="architecture_file_system.html">File System</a>
-		<a href="portfolio.html">Portfolio</a>
+
 		<a href="about.html">About</a>
-		<a href="archive.html" target="_blank">Archive</a>
+
 		<a href="links.html">Links</a>	
 	</nav>
 	<div class="content">
@@ -55,12 +55,12 @@
 			<li><a href="https://apps.ankiweb.net/">Anki</a> is a spaced repetition flashcard software (will change your life if you use it too much)</li>
 			<li><a href="https://ambientcg.com/">ambientCG</a> - 3D Assets</li>
 			</ul>
-			<h4>
+			<h4>Channels</h4>
 				<ul>
 					<li><a href="https://www.youtube.com/@LearnUpstairs/">Upstairs</a> focuses on architectural representation and visualization</li>
 					<li><a href="https://www.youtube.com/channel/UCiRsHYsIuWwU78i9RE3nlMg">Gediminas Kirdeikis</a> teaches you experimental modeling, rendering, and fundamental tech.</li>
 				</ul>
-			</h4>
+			
 			
 			
 	</div>
